--- a/CNN_example.ipynb
+++ b/CNN_example.ipynb
@@ -93,7 +93,8 @@
     },
     "colab_type": "code",
     "id": "Bv7wDfYCSoNQ",
-    "outputId": "0e604f9a-c3c0-4e0a-91bb-0caa8ee9cf6a"
+    "outputId": "0e604f9a-c3c0-4e0a-91bb-0caa8ee9cf6a",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -262,69 +263,6 @@
     "\n",
     "\n",
     "datagen.fit(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 629
-    },
-    "colab_type": "code",
-    "id": "MTCZwquaQL2p",
-    "outputId": "9cd9876e-ec09-417e-c7c2-482ccde0cca8"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_3\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "batch_normalization_4 (Batch (None, 28, 28, 1)         4         \n",
-      "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 24, 24, 32)        832       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 12, 12, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 12, 12, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 12, 12, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 12, 12, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 12, 12, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "dropout_7 (Dropout)          (None, 12, 12, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 6, 6, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 2304)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 128)               295040    \n",
-      "_________________________________________________________________\n",
-      "dropout_8 (Dropout)          (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_5 (Batch (None, 128)               512       \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 10)                1290      \n",
-      "=================================================================\n",
-      "Total params: 353,102\n",
-      "Trainable params: 352,844\n",
-      "Non-trainable params: 258\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "#모델의 요약본입니다.\n",
-    "#Output shape는 해당 layer를 거치고 난 후 결과의 shape이며 \n",
-    "#Param#의 경우 해당 Layer에서의 parameter의 개수입니다.\n",
-    "model.summary()"
    ]
   },
   {
