--- a/CNN_example.ipynb
+++ b/CNN_example.ipynb
@@ -216,11 +216,9 @@
     "    model = Sequential()\n",
     "    #Convolution Layer를 추가합니다. 이 Layer에는 산출하는 Activation map의 갯수, 사용하는 filter의 크기, padding, stride를 설정하며\n",
     "    #추가적으로 Activation function, weight initializer를 추가할 수 있습니다.\n",
-    "    #바로 아래 layer의 경우 Activation map(channel)의 갯수가 32개, filter size가 5x5이고 padding은 input shape를 유지시킵니다. stride는 default값인 1,1입니다.\n",
-    "    #relu를 activation으로 사용했고 따라서 weight initialzier를 he를 사용했습니다.\n",
-    "    model.add(Conv2D(filters=32, kernel_size=(5,5), activation='relu', padding='smae',input_shape=(28, 28, 1),kernel_initializer='he_normal'))\n",
-    "    model.add(Conv2D(filters=64, kernel_size=(3,3), activation='relu', padding='same',kernel_initializer='he_normal'))\n",
-    "    model.add(Conv2D(filters=64, kernel_size=(3,3), activation='relu', padding='same',kernel_initializer='he_normal'))\n",
+    "    model.add(Conv2D(filters=16, kernel_size=(1,1),input_shape=(28, 28, 1)))\n",
+    "    model.add(Conv2D(filters=16, kernel_size=(1,1)))\n",
+    "    model.add(Conv2D(filters=16, kernel_size=(1,1)))\n",
     "    #pooling layer를 추가합니다.\n",
     "    model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "    #feature extraction을 마쳤으므로 이를 MLP에 넣기위해 데이터를 flatten시킵니다. 즉 image의 shape를 3차원 -> 1차원으로 변경합니다.\n",
@@ -248,6 +246,7 @@
    "source": [
     "#이미지 학습에서 중요한 요소 중 하나는 augumentation입니다. 이미지를 좌,우로 반전시키거나, 회전하거나, 확대시킵니다.\n",
     "#즉 배치마다 데이터의 모양이 달라집니다. 그리고 데이터를 더 많이 넣을 수도 있습니다.\n",
+    "#이 내용은 세션 내용에는 없지만 너무 중요한 부분이라 넣었습니다.\n",
     "datagen = ImageDataGenerator(\n",
     "        featurewise_center=False,  # set input mean to 0 over the dataset\n",
     "        samplewise_center=False,  # set each sample mean to 0\n",
